# AgenticNutriRAG

./: .env.example  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  pyproject.toml
data/eval/: answer_ground_truth.json  answer_report.md  ground_truth.json  retrieval_report.md
openspec/: config.yaml
openspec/changes/build-nutrition-rag-agent/: design.md  proposal.md  tasks.md
openspec/changes/build-nutrition-rag-agent/specs/answer-evaluation/: spec.md
openspec/changes/build-nutrition-rag-agent/specs/chat-interface/: spec.md
openspec/changes/build-nutrition-rag-agent/specs/deployment/: spec.md
openspec/changes/build-nutrition-rag-agent/specs/monitoring/: spec.md
openspec/changes/build-nutrition-rag-agent/specs/nutrition-data-ingestion/: spec.md
openspec/changes/build-nutrition-rag-agent/specs/nutrition-rag-agent/: spec.md
scripts/: explore_es.py
src/: config.py
src/agent/: models.py  query_rewriting.py  rag.py  retrieval.py  run.py  tools.py
src/app/: main.py
src/eval/: answer_eval.py  answer_ground_truth.py  answer_scoring.py  ground_truth.py  metrics.py  retrieval_eval.py
src/ingestion/: elasticsearch_index.py  embeddings.py  models.py  pipeline.py  transform.py  usda_client.py
src/monitoring/: feedback.py
tests/: test_agent_query_rewriting.py  test_agent_rag.py  test_agent_retrieval.py  test_agent_tools.py  test_eval_answer_eval.py  test_eval_answer_ground_truth.py  test_eval_answer_scoring.py  test_eval_ground_truth.py  test_eval_metrics.py  test_eval_retrieval_eval.py  test_ingestion_elasticsearch_index.py  test_ingestion_pipeline.py  test_ingestion_transform.py  test_ingestion_usda_client.py
(+1 files in other folders)
